Update app tag from commit message

--- a/charts/myapp-chart/values.yaml
+++ b/charts/myapp-chart/values.yaml
@@ -10,7 +10,7 @@ redis:
 
 app:
   repository: public.ecr.aws/v3g6g4v7/antiwater19-lab2
-  tag: version196
+  tag: can-run-github-actions-ssh-auth-with-github-secret
   replicas: 2
 
 nginx:
