헬름 차트에 스토리지클래스 추가

--- a/charts/myapp-chart/templates/db-secret.yaml
+++ b/charts/myapp-chart/templates/db-secret.yaml
@@ -4,6 +4,9 @@ metadata:
   name: frodo-db-secret
 type: Opaque
 stringData:
-  MYSQL_ROOT_PASSWORD: frodo5020!!
-  MYSQL_USER: frodo
-  MYSQL_PASSWORD: frodo5020!!
+  MYSQL_ROOT_PASSWORD: ZnJvZG81MDIwISEh
+  MYSQL_USER: ZnJvZG8=
+  MYSQL_PASSWORD: ZnJvZG81MDIwISEh
+  # MYSQL_ROOT_PASSWORD: frodo5020!!
+  # MYSQL_USER: frodo
+  # MYSQL_PASSWORD: frodo5020!!
