--- a/charts/myapp-chart/templates/db-secret.yaml
+++ b/charts/myapp-chart/templates/db-secret.yaml
@@ -1,12 +1,9 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: frodo-db-secret
+  name: mysql-secret
 type: Opaque
 stringData:
-  # MYSQL_ROOT_PASSWORD: ZnJvZG81MDIwISEh
-  # MYSQL_USER: ZnJvZG8=
-  # MYSQL_PASSWORD: ZnJvZG81MDIwISEh
   MYSQL_ROOT_PASSWORD: frodo5020!!
   MYSQL_USER: frodo
   MYSQL_PASSWORD: frodo5020!!
