--- a/charts/myapp-chart/values.yaml
+++ b/charts/myapp-chart/values.yaml
@@ -11,7 +11,7 @@ redis:
 
 app:
   repository: public.ecr.aws/r9n4c1b3/minsu/testingapp
-  tag: can-run-github-actions-ssh-auth-with-github-secret
+  tag: slack-api-testing
   replicas: 1
 
 nginx:
